--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,7 +25,7 @@ jobs:
         version:
           - '1.10'
           - '1.12'
-          - 'pre'
+          - 'nightly'
         os:
           - ubuntu-latest
         arch:
