--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,19 @@
 name = "OrbitPropagationLibraryNRLMSIS"
 uuid = "13047893-382f-4339-b745-3678b5447bed"
-authors = ["Andrew Palski"]
 version = "1.0.0-DEV"
+authors = ["Andrew Palski"]
+
+[deps]
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+OrbitPropagationLibrarySOFA = "38b9e004-e2fa-4648-aa91-337faf7b69aa"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
+FileIO = "1.17.1"
+JLD2 = "0.6.3"
+OrbitPropagationLibrarySOFA = "0.3.1"
+StaticArrays = "1.9.15"
 julia = "1.10.10"
 
 [extras]
